fixed issue with price not showing on gallery page, fixed issue with orphaned two char word on about page, fixed issue with edit modal not closing on save on admin page

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -214,4 +214,7 @@ li:last-child {
     max-height: 75vh;
     min-width: 0;
   }
+  .about > img {
+    float: none;
+  }
 }
